Issue #1156: Profile Settings - button text wrapping

--- a/src/shared/components/Settings/Tools/Subscriptions/styles.scss
+++ b/src/shared/components/Settings/Tools/Subscriptions/styles.scss
@@ -140,6 +140,7 @@
     margin: 0;
     padding: 0;
     width: 156px;
+    white-space: nowrap;
   }
 
   .complete {
